upgrade husarnet version to 2.0.13

--- a/compose.client.yaml
+++ b/compose.client.yaml
@@ -13,7 +13,7 @@ services:
     command: ros2 run demo_nodes_cpp listener
 
   husarnet-listener:
-    image: husarnet/husarnet-nightly:2022.09.29.3
+    image: husarnet/husarnet:2.0.13
     volumes:
       - /var/lib/husarnet
     sysctls:
@@ -26,4 +26,4 @@ services:
       - HOSTNAME=my-listener
       - JOINCODE=${JOINCODE:?you need to create .env file with a JOINCODE variable}
       - WAIT_HOSTNAMES=my-listener,my-talker
-      # - HUSARNET_DEBUG=1
+      - HUSARNET_DEBUG=1
